syntax = "proto3";

option java_multiple_files = true;
option java_package = "proto";

package proto;

//
// Complex data types
//
message CompositeDateTime {
    string date = 1;
    string dateTime = 2;
    string dayTimeDuration = 3;
    string time = 4;
    string yearMonthDuration = 5;
}

//
// Request / response types
//
message CompositeDateTimeRequest {
    proto.CompositeDateTime compositeInputDateTime = 1;
}

message CompositeDateTimeResponse {
    proto.CompositeDateTime compositeDateTime = 1;
}

message DateRequest {
    string inputDate = 1;
}

message DateResponse {
    string date = 1;
}

message DateTimeRequest {
    string inputDateTime = 1;
}

message DateTimeResponse {
    string dateTime = 1;
}

message TimeRequest {
    string inputTime = 1;
}

message TimeResponse {
    string time = 1;
}

//
// Services
//
service CompositeDateTimeService {
    rpc apply(CompositeDateTimeRequest) returns (CompositeDateTimeResponse);
}

service DateService {
    rpc apply(DateRequest) returns (DateResponse);
}

service DateTimeService {
    rpc apply(DateTimeRequest) returns (DateTimeResponse);
}

service TimeService {
    rpc apply(TimeRequest) returns (TimeResponse);
}

